src/test/resources/30/expanded/valid/issue270/EPUB/lorem-2.xhtml
<?xml version="1.0" encoding="UTF-8"?>
<html xmlns="http://www.w3.org/1999/xhtml" xml:lang="la" lang="la"
	xmlns:epub="http://www.idpf.org/2007/ops">
	<head>
		<title>Lorem Ipsum</title>
		<link type="text/css" rel="stylesheet" href="lorem.css" />
	</head>
	<body>
		<h1>Lorem Ipsum</h1>
		<section id="ch2">
			<h2>Chapter 2</h2>
			<p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Nulla laoreet nibh felis.
				Vestibulum ante ipsum primis in faucibus orci luctus et ultrices posuere cubilia
				Curae; Etiam est sapien, dapibus eget gravida nec, accumsan a turpis. Nunc in nisi
				ut dolor elementum porttitor. Mauris hendrerit pulvinar tincidunt. Etiam metus
				metus, ullamcorper ut varius lacinia, luctus et nibh. Donec ut metus enim, id
				faucibus nunc. Quisque ut iaculis mauris. Duis pellentesque nulla ut eros ultricies
				quis condimentum eros adipiscing. Sed porta ultrices diam, ut sagittis lectus mattis
				a. Phasellus gravida, sapien vitae mollis interdum, dui neque tempor arcu, ac ornare
				leo ipsum ut nisl.</p>

			<p>Donec porta, odio et aliquet molestie, felis tellus fermentum leo, id interdum magna
				massa quis ligula. Integer elementum mauris eget nisl eleifend facilisis nec sit
				amet tellus. Morbi consectetur dignissim egestas. Donec pulvinar, enim eu auctor
				cursus, turpis arcu venenatis turpis, eu cursus magna nisl sit amet ante. Curabitur
				eleifend arcu eget nibh facilisis mattis. Etiam nisl nunc, semper vitae condimentum
				sed, viverra sit amet lacus. Curabitur et orci augue. Suspendisse sollicitudin
				vulputate risus, sit amet consequat erat mollis eu. Nunc sodales tincidunt
				tincidunt.</p>

			<p>Aliquam erat volutpat. Aliquam ornare augue et nulla consequat commodo. Quisque
				dictum rhoncus orci vel euismod. Proin leo turpis, adipiscing quis facilisis id,
				condimentum sed metus. Nullam pellentesque scelerisque est nec tristique. Nunc augue
				turpis, consequat non varius quis, aliquam auctor dolor. Cras luctus dignissim justo
				sit amet laoreet. Quisque vel ipsum quis massa suscipit vehicula.</p>

			<p>Pellentesque habitant morbi tristique senectus et netus et malesuada fames ac turpis
				egestas. Vivamus fringilla eleifend magna, vel commodo turpis egestas at.
				Pellentesque habitant morbi tristique senectus et netus et malesuada fames ac turpis
				egestas. Sed eu lorem quam, et sagittis libero. Maecenas vel ante id sem bibendum
				laoreet nec dignissim justo. Class aptent taciti sociosqu ad litora torquent per
				conubia nostra, per inceptos himenaeos. Fusce eu lorem orci, eu viverra nisi. Lorem
				ipsum dolor sit amet, consectetur adipiscing elit. Vestibulum dapibus commodo
				pellentesque. Maecenas quis est accumsan est interdum pharetra egestas nec lorem.
				Nam a lectus sit amet justo facilisis suscipit.</p>

			<p>Integer dolor dolor, volutpat id commodo id, gravida id risus. Donec consectetur
				sollicitudin sem, non auctor urna pulvinar non. Vivamus ipsum nisi, commodo sed
				scelerisque id, porta nec massa. Vestibulum ac risus et augue faucibus fermentum ut
				et nisi. Integer tincidunt suscipit ipsum, sed interdum felis mollis sed.
				Suspendisse potenti. Praesent et mauris et quam consequat tristique. Morbi mi dolor,
				pharetra quis rutrum quis, fringilla in tortor. Sed a nulla vitae leo dapibus
				cursus. Aliquam erat volutpat. Integer purus purus, dictum id bibendum at, lobortis
				quis metus.</p>
		</section>
	</body>
</html>
