src/test/resources/30/expanded/invalid/lorem-css-urls-2/EPUB/lorem2.xhtml
<?xml version="1.0" encoding="UTF-8"?>
<html xmlns="http://www.w3.org/1999/xhtml" xml:lang="la" lang="la"
	xmlns:epub="http://www.idpf.org/2007/ops">
	<head>
		<title>Lorem Ipsum</title>
		<link type="text/css" rel="stylesheet" href="lorem.css" />
	</head>
	<body>
		<section id="ch3">
			<h2>Chapter 3</h2>
			<p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Aliquam vel purus mauris, ut
				auctor massa. Pellentesque non nunc risus. Fusce a massa augue. Nunc erat ante,
				auctor id varius ac, vestibulum non purus. Quisque non dui in sem consectetur
				condimentum non ac quam. Quisque ultricies nulla nec urna fringilla pretium.
				Pellentesque dictum pulvinar purus in mattis. Aliquam vestibulum orci sed magna
				vestibulum a sollicitudin lectus pharetra. Suspendisse luctus risus imperdiet nunc
				condimentum malesuada. Nulla fringilla vulputate vestibulum. Sed diam dui, fringilla
				quis sagittis nec, viverra et nibh.</p>

		</section>
		<section id="ch4">
			<h2>Chapter 4</h2>
			<p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Nulla laoreet nibh felis.
				Vestibulum ante ipsum primis in faucibus orci luctus et ultrices posuere cubilia
				Curae; Etiam est sapien, dapibus eget gravida nec, accumsan a turpis. Nunc in nisi
				ut dolor elementum porttitor. Mauris hendrerit pulvinar tincidunt. Etiam metus
				metus, ullamcorper ut varius lacinia, luctus et nibh. Donec ut metus enim, id
				faucibus nunc. Quisque ut iaculis mauris. Duis pellentesque nulla ut eros ultricies
				quis condimentum eros adipiscing. Sed porta ultrices diam, ut sagittis lectus mattis
				a. Phasellus gravida, sapien vitae mollis interdum, dui neque tempor arcu, ac ornare
				leo ipsum ut nisl.</p>

			<p>Donec porta, odio et aliquet molestie, felis tellus fermentum leo, id interdum magna
				massa quis ligula. Integer elementum mauris eget nisl eleifend facilisis nec sit
				amet tellus. Morbi consectetur dignissim egestas. Donec pulvinar, enim eu auctor
				cursus, turpis arcu venenatis turpis, eu cursus magna nisl sit amet ante. Curabitur
				eleifend arcu eget nibh facilisis mattis. Etiam nisl nunc, semper vitae condimentum
				sed, viverra sit amet lacus. Curabitur et orci augue. Suspendisse sollicitudin
				vulputate risus, sit amet consequat erat mollis eu. Nunc sodales tincidunt
				tincidunt.</p>

		</section>
	</body>
</html>
